# profileRL

./: .gitignore  pyproject.toml
alignment/: __init__.py  drgrpo_grader.py  eval.py  grpo.py  prompts.py
basics/: pyproject.toml
scripts/: benchmark_attention_scales.py  benchmark_transformer.py  debug_grpo_tokenizer_alignment.py  train_grpo.py
tests/: adapters.py  test_grpo_tokenizer_alignment.py
